--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prettier": "^1.19.1"
   },
   "engines" : { 
-    "node" : ">=20.16.0 <21.0.0"
+    "node" : "20.x"
   },
   "keywords": [
     "gatsby"
